# leerGenicam_xml

./: CMakeLists.txt  Node.cpp  Node2.cpp  README.md  conanfile.txt  ejemplo.xml  ejemploGenicam_simple.xml
src/: main.cpp
